
Parma Polyhedra Library NEWS -- history of user-visible changes
===============================================================


--------------------------------------------------------------------------
NEWS for version 0.7  (released date to be decided)
--------------------------------------------------------------------------

New and Changed Features
========================

o  New method dimension_type Polyhedron::dimension() returns the dimension
   of *this (not to be confused with the dimension of its enclosing vector
   space) or 0, if *this is empty.

o  Now `make check' runs a number of tests with `ppl_lcdd', comparing
   the results to expected ones.


Bugfixes
========

o  Fixed a bug in a private method of class GenSys that in some
   circumstances was affecting Polyhedron::H79_widening_assign(),
   as well as all the limited and bounded extrapolation operators.

o  Fixed a bug in the `ppl_lpsol' demo.


--------------------------------------------------------------------------
NEWS for version 0.6.1  (released on August 20, 2004)
--------------------------------------------------------------------------

New and Changed Features
========================

o  Some packaging issues have been fixed.

o  The documentation has been completed and improved.

o  The methods

     Polyhedra_PowerSet::semantically_contains(const Polyhedra_PowerSet&) and
     Polyhedra_PowerSet::semantically_equals(const Polyhedra_PowerSet&)

   have been renamed

     Polyhedra_PowerSet::geometrically_covers(const Polyhedra_PowerSet&) and
     Polyhedra_PowerSet::geometrically_equals(const Polyhedra_PowerSet& y),

   respectively.


--------------------------------------------------------------------------
NEWS for version 0.6  (released on August 18, 2004)
--------------------------------------------------------------------------

New and Changed Features
========================

o  New templatic classes Determinate, PowerSet, and Polyhedra_PowerSet.